[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gui/ControlEvents.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/Menu.gd" type="Script" id=2]

[node name="Menu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItems" type="VBoxContainer" parent="."]
margin_left = 213.0
margin_top = 128.0
margin_right = 299.0
margin_bottom = 172.0

[node name="Host" type="Button" parent="MenuItems"]
margin_right = 86.0
margin_bottom = 20.0
text = "Host Server"
flat = true

[node name="Join" type="Button" parent="MenuItems"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 44.0
text = "Join Server"
flat = true

[node name="JoinContainer" type="HBoxContainer" parent="."]
margin_left = 193.0
margin_top = 138.0
margin_right = 319.0
margin_bottom = 162.0
script = ExtResource( 1 )

[node name="Server" type="LineEdit" parent="JoinContainer"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Connect" type="Button" parent="JoinContainer"]
margin_left = 62.0
margin_right = 126.0
margin_bottom = 24.0
text = "Connect"
flat = true
[connection signal="pressed" from="MenuItems/Host" to="." method="start_server"]
[connection signal="pressed" from="MenuItems/Join" to="MenuItems" method="hide"]
[connection signal="pressed" from="MenuItems/Join" to="JoinContainer" method="show"]
[connection signal="back" from="JoinContainer" to="MenuItems" method="show"]
[connection signal="pressed" from="JoinContainer/Connect" to="." method="connect_server"]
